--- a/MyLittleMonster/Info.plist
+++ b/MyLittleMonster/Info.plist
@@ -44,5 +44,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Phosphate.ttc</string>
+	</array>
 </dict>
 </plist>
